--- a/PWeb2023-Tugas03c-SKRIP-I-2200018412-MUHAMAD FARHAN NURJAMIL.html
+++ b/PWeb2023-Tugas03c-SKRIP-I-2200018412-MUHAMAD FARHAN NURJAMIL.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 		ini adalah tulisan biasa
-		 <br><strong>Ini adalah tulisan tebal</strong>
+		 <strong>Ini adalah tulisan tebal</strong>
 		 <br><i>Ini adalah tulisan miring</i>
 		 <br><u>Ini tulisan garis bawah</u>
 		 <br>ini adalah gabungan dari<strong>tulisan tebal, </strong><i>tulisan miring, </i><u>dan tulisan garis bawah</u>
