--- a/frame2.html
+++ b/frame2.html
@@ -11,7 +11,7 @@
 			padding: 0;
 		}
 		.menu {
-			background-color: #333;
+			background-color: #778899;
 			color: #fff;
 			padding: 20px;
 		}
@@ -31,6 +31,7 @@
 			padding: 10px;
 			border-radius: 5px;
 			transition: background-color 0.3s ease;
+			text-shadow: 5px 5px 5px black;
 		}
 		.menu a:hover {
 			background-color: #555;
