--- a/frame3.html
+++ b/frame3.html
@@ -45,6 +45,23 @@
       <th>Alamat</th>
     </tr>
   </table>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-left">
+        <h3>Tentang Kami</h3>
+        <p>web ini dibuat untuk memenuhi tugas praktek pweb Universitas Ahmad Dahlan</p>
+      </div>
+      <div class="footer-right">
+        <h3>Hubungi Kami</h3>
+        <p>Email: farhan.nurjamil17@gmail.com</p>
+        <p>Telepon: 081223972xxx</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>Hak Cipta &copy; 2023 - Muhamad Farhan Nurjamil.</p>
+    </div>
+  </footer>
   
   <script>
     document.getElementById("myForm").addEventListener("submit", function(event) {
